<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:id="@+id/backButton"
                android:layout_width="@dimen/toolbar_height"
                android:layout_height="match_parent"
                android:padding="12dp"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/button_back"/>

        <com.arindam.abode.utils.widgets.CustomFontTextView
                android:id="@+id/headerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/note_new"
                android:textSize="@dimen/header_text"
                android:textColor="@color/black"
                app:custom_font="@string/roboto_regular"/>

    </RelativeLayout>

    <EditText
            android:id="@+id/noteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/header_text"
            android:background="@android:color/transparent"
            android:hint="@string/note_hint"
            android:maxLines="15"
            android:inputType="textMultiLine"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:ignore="Autofill"/>

    <RelativeLayout
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_save_height"
            android:background="@drawable/button_background"
            android:layout_margin="@dimen/button_save_margin"
            app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
                android:layout_width="@dimen/button_save_icon"
                android:layout_height="@dimen/button_save_icon"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_check_white_24dp"
                android:contentDescription="@string/button_save"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>